--- a/code/day1.Rmd
+++ b/code/day1.Rmd
@@ -40,13 +40,6 @@ df %>%
 ### Part 2
 
 ```{r}
-df %>% 
-    mutate(rn = row_number(),
-           range_1 = rn - (2 + rn) %% 3,
-           range_2 = rn - (1 + rn) %% 3,
-           range_3 = rn - (0 + rn) %% 3,
-           range_4 = rn - (rn - 1) %% 3) %>% 
-    group_by(range_1) %>% 
-    mutate()
+diff(df$depth, 3) %>% as_tibble() %>% count(value > 0)
 ```
 
